project2/src/intermediate/antlr4/SimpleA3Parser.java
// Generated from ./SimpleA3.g4 by ANTLR 4.13.2

package intermediate.antlr4;

import intermediate.symtab.SymtabEntry;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({
    "all",
    "warnings",
    "unchecked",
    "unused",
    "cast",
    "CheckReturnValue",
    "this-escape"
})
public class SimpleA3Parser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int T__0 = 1,
            T__1 = 2,
            T__2 = 3,
            T__3 = 4,
            T__4 = 5,
            T__5 = 6,
            T__6 = 7,
            T__7 = 8,
            T__8 = 9,
            T__9 = 10,
            T__10 = 11,
            T__11 = 12,
            T__12 = 13,
            T__13 = 14,
            T__14 = 15,
            T__15 = 16,
            T__16 = 17,
            PROGRAM = 18,
            BEGIN = 19,
            END = 20,
            DIV = 21,
            MOD = 22,
            AND = 23,
            OR = 24,
            NOT = 25,
            REPEAT = 26,
            UNTIL = 27,
            WRITE = 28,
            WRITELN = 29,
            CASE = 30,
            OF = 31,
            IDENTIFIER = 32,
            INTEGER = 33,
            REAL = 34,
            LETTER = 35,
            DIGIT = 36,
            DIGITS = 37,
            WHITESPACE = 38,
            COMMENT = 39,
            QUOTE = 40,
            CHARACTER = 41,
            STRING = 42;
    public static final int RULE_program = 0,
            RULE_programHeader = 1,
            RULE_block = 2,
            RULE_declarations = 3,
            RULE_identifier = 4,
            RULE_statement = 5,
            RULE_emptyStatement = 6,
            RULE_compoundStatement = 7,
            RULE_statementList = 8,
            RULE_assignmentStatement = 9,
            RULE_repeatStatement = 10,
            RULE_caseStatement = 11,
            RULE_selectBranch = 12,
            RULE_selectConstants = 13,
            RULE_selectConstant = 14,
            RULE_writeStatement = 15,
            RULE_writelnStatement = 16,
            RULE_writeArguments = 17,
            RULE_writeArgument = 18,
            RULE_format = 19,
            RULE_width = 20,
            RULE_precision = 21,
            RULE_sign = 22,
            RULE_expression = 23,
            RULE_simpleExpression = 24,
            RULE_term = 25,
            RULE_factor = 26,
            RULE_relOp = 27,
            RULE_addOp = 28,
            RULE_mulOp = 29,
            RULE_variable = 30,
            RULE_unsignedConstant = 31,
            RULE_integerConstant = 32,
            RULE_realConstant = 33,
            RULE_characterConstant = 34,
            RULE_stringConstant = 35;

    private static String[] makeRuleNames() {
        return new String[] {
            "program",
            "programHeader",
            "block",
            "declarations",
            "identifier",
            "statement",
            "emptyStatement",
            "compoundStatement",
            "statementList",
            "assignmentStatement",
            "repeatStatement",
            "caseStatement",
            "selectBranch",
            "selectConstants",
            "selectConstant",
            "writeStatement",
            "writelnStatement",
            "writeArguments",
            "writeArgument",
            "format",
            "width",
            "precision",
            "sign",
            "expression",
            "simpleExpression",
            "term",
            "factor",
            "relOp",
            "addOp",
            "mulOp",
            "variable",
            "unsignedConstant",
            "integerConstant",
            "realConstant",
            "characterConstant",
            "stringConstant"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null, "'.'", "';'", "':='", "':'", "','", "'('", "')'", "'-'", "'+'", "'='", "'<>'",
            "'<'", "'<='", "'>'", "'>='", "'*'", "'/'", null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null, null, null,
            null, "'''"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "PROGRAM",
            "BEGIN",
            "END",
            "DIV",
            "MOD",
            "AND",
            "OR",
            "NOT",
            "REPEAT",
            "UNTIL",
            "WRITE",
            "WRITELN",
            "CASE",
            "OF",
            "IDENTIFIER",
            "INTEGER",
            "REAL",
            "LETTER",
            "DIGIT",
            "DIGITS",
            "WHITESPACE",
            "COMMENT",
            "QUOTE",
            "CHARACTER",
            "STRING"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SimpleA3.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SimpleA3Parser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public ProgramHeaderContext programHeader() {
            return getRuleContext(ProgramHeaderContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(72);
                programHeader();
                setState(73);
                block();
                setState(74);
                match(T__0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramHeaderContext extends ParserRuleContext {
        public TerminalNode PROGRAM() {
            return getToken(SimpleA3Parser.PROGRAM, 0);
        }

        public IdentifierContext identifier() {
            return getRuleContext(IdentifierContext.class, 0);
        }

        public ProgramHeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_programHeader;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterProgramHeader(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitProgramHeader(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitProgramHeader(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramHeaderContext programHeader() throws RecognitionException {
        ProgramHeaderContext _localctx = new ProgramHeaderContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_programHeader);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(PROGRAM);
                setState(77);
                identifier();
                setState(78);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlockContext extends ParserRuleContext {
        public DeclarationsContext declarations() {
            return getRuleContext(DeclarationsContext.class, 0);
        }

        public CompoundStatementContext compoundStatement() {
            return getRuleContext(CompoundStatementContext.class, 0);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener) ((SimpleA3Listener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_block);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(80);
                declarations();
                setState(81);
                compoundStatement();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DeclarationsContext extends ParserRuleContext {
        public DeclarationsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declarations;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterDeclarations(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitDeclarations(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitDeclarations(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclarationsContext declarations() throws RecognitionException {
        DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_declarations);
        try {
            enterOuterAlt(_localctx, 1);
            {
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IdentifierContext extends ParserRuleContext {
        public SymtabEntry entry = null;

        public TerminalNode IDENTIFIER() {
            return getToken(SimpleA3Parser.IDENTIFIER, 0);
        }

        public IdentifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_identifier;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterIdentifier(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitIdentifier(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitIdentifier(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IdentifierContext identifier() throws RecognitionException {
        IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_identifier);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                match(IDENTIFIER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public CompoundStatementContext compoundStatement() {
            return getRuleContext(CompoundStatementContext.class, 0);
        }

        public AssignmentStatementContext assignmentStatement() {
            return getRuleContext(AssignmentStatementContext.class, 0);
        }

        public RepeatStatementContext repeatStatement() {
            return getRuleContext(RepeatStatementContext.class, 0);
        }

        public WriteStatementContext writeStatement() {
            return getRuleContext(WriteStatementContext.class, 0);
        }

        public WritelnStatementContext writelnStatement() {
            return getRuleContext(WritelnStatementContext.class, 0);
        }

        public CaseStatementContext caseStatement() {
            return getRuleContext(CaseStatementContext.class, 0);
        }

        public EmptyStatementContext emptyStatement() {
            return getRuleContext(EmptyStatementContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_statement);
        try {
            setState(94);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case BEGIN:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(87);
                        compoundStatement();
                    }
                    break;
                case IDENTIFIER:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(88);
                        assignmentStatement();
                    }
                    break;
                case REPEAT:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(89);
                        repeatStatement();
                    }
                    break;
                case WRITE:
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(90);
                        writeStatement();
                    }
                    break;
                case WRITELN:
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(91);
                        writelnStatement();
                    }
                    break;
                case CASE:
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(92);
                        caseStatement();
                    }
                    break;
                case T__1:
                case END:
                case UNTIL:
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(93);
                        emptyStatement();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EmptyStatementContext extends ParserRuleContext {
        public EmptyStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_emptyStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterEmptyStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitEmptyStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitEmptyStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final EmptyStatementContext emptyStatement() throws RecognitionException {
        EmptyStatementContext _localctx = new EmptyStatementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_emptyStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CompoundStatementContext extends ParserRuleContext {
        public TerminalNode BEGIN() {
            return getToken(SimpleA3Parser.BEGIN, 0);
        }

        public StatementListContext statementList() {
            return getRuleContext(StatementListContext.class, 0);
        }

        public TerminalNode END() {
            return getToken(SimpleA3Parser.END, 0);
        }

        public CompoundStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compoundStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterCompoundStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitCompoundStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitCompoundStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CompoundStatementContext compoundStatement() throws RecognitionException {
        CompoundStatementContext _localctx = new CompoundStatementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_compoundStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(BEGIN);
                setState(99);
                statementList();
                setState(100);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementListContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public StatementListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statementList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterStatementList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitStatementList(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitStatementList(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementListContext statementList() throws RecognitionException {
        StatementListContext _localctx = new StatementListContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_statementList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                statement();
                setState(107);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(103);
                            match(T__1);
                            setState(104);
                            statement();
                        }
                    }
                    setState(109);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AssignmentStatementContext extends ParserRuleContext {
        public VariableContext variable() {
            return getRuleContext(VariableContext.class, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public AssignmentStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignmentStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterAssignmentStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitAssignmentStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitAssignmentStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssignmentStatementContext assignmentStatement() throws RecognitionException {
        AssignmentStatementContext _localctx = new AssignmentStatementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_assignmentStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                variable();
                setState(111);
                match(T__2);
                setState(112);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RepeatStatementContext extends ParserRuleContext {
        public TerminalNode REPEAT() {
            return getToken(SimpleA3Parser.REPEAT, 0);
        }

        public StatementListContext statementList() {
            return getRuleContext(StatementListContext.class, 0);
        }

        public TerminalNode UNTIL() {
            return getToken(SimpleA3Parser.UNTIL, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public RepeatStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_repeatStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterRepeatStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitRepeatStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitRepeatStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RepeatStatementContext repeatStatement() throws RecognitionException {
        RepeatStatementContext _localctx = new RepeatStatementContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_repeatStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114);
                match(REPEAT);
                setState(115);
                statementList();
                setState(116);
                match(UNTIL);
                setState(117);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CaseStatementContext extends ParserRuleContext {
        public TerminalNode CASE() {
            return getToken(SimpleA3Parser.CASE, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TerminalNode OF() {
            return getToken(SimpleA3Parser.OF, 0);
        }

        public List<SelectBranchContext> selectBranch() {
            return getRuleContexts(SelectBranchContext.class);
        }

        public SelectBranchContext selectBranch(int i) {
            return getRuleContext(SelectBranchContext.class, i);
        }

        public TerminalNode END() {
            return getToken(SimpleA3Parser.END, 0);
        }

        public CaseStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_caseStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterCaseStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).exitCaseStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpleA3Visitor)
                return ((SimpleA3Visitor<? extends T>) visitor).visitCaseStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CaseStatementContext caseStatement() throws RecognitionException {
        CaseStatementContext _localctx = new CaseStatementContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_caseStatement);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                match(CASE);
                setState(120);
                expression();
                setState(121);
                match(OF);
                setState(122);
                selectBranch();
                setState(127);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(123);
                                match(T__1);
                                setState(124);
                                selectBranch();
                            }
                        }
                    }
                    setState(129);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
                setState(131);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__1) {
                    {
                        setState(130);
                        match(T__1);
                    }
                }

                setState(133);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SelectBranchContext extends ParserRuleContext {
        public SelectConstantsContext selectConstants() {
            return getRuleContext(SelectConstantsContext.class, 0);
        }

        public StatementContext statement() {
            return getRuleContext(StatementContext.class, 0);
        }

        public SelectBranchContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectBranch;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpleA3Listener)
                ((SimpleA3Listener) listener).enterSelectBranch(this);
        }
